--- a/firmware/platformio.ini
+++ b/firmware/platformio.ini
@@ -10,9 +10,9 @@
 
 [env:synchronize_drive]
 framework = arduino
-platform = espressif32
+platform = espressif32@^6.5.0
 board = nodemcu-32s
-board_build.flash_mode = qio
+board_build.flash_mode = dio ;qio
 board_build.partitions = min_spiffs.csv
 monitor_speed = 115200
 monitor_port = /dev/ttyUSB0
@@ -20,7 +20,7 @@ upload_port = /dev/ttyUSB0
 upload_protocol = esptool
 monitor_filters = esp32_exception_decoder
 board_microros_distro = ${sysenv.ROS_DISTRO}
-board_microros_transport = serial
+board_microros_transport = wifi
 lib_deps = 
 	https://github.com/micro-ROS/micro_ros_platformio
 	madhephaestus/ESP32Servo@^1.1.2
@@ -36,4 +36,5 @@ build_flags =
 	-I config
 	-D __PGMSPACE_H_
 	-D USE_ESP32_CONFIG
-	; -D MICROROS_TRANSPORT_WIFI
+	-D MICROROS_TRANSPORT_WIFI
+	; -D CORE_DEBUG_LEVEL=5
