--- a/mor_luam_ws/src/mor_luam/package.xml
+++ b/mor_luam_ws/src/mor_luam/package.xml
@@ -17,6 +17,7 @@
   <depend>sensor_msgs</depend>
   <depend>geometry_msgs</depend>
   <depend>std_msgs</depend>  <!-- Add std_msgs for Float32 messages -->
+  <depend>nav_msgs</depend>
 
   <!-- Camera Node Dependencies -->
   <depend>cv_bridge</depend>
